# PythonProject

./: .env  .env.example  .gitignore  docker-compose.yml  pyproject.toml
apps/pizza/: filter.py  models.py  serializer.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_rename_pizza_pizzamodel.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
