[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["slavinserg4 <slavinserg4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
mysqlclient = "^2.2.6"
django-dotenv = "^1.4.2"
mysql = "^0.0.3"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
